@@ -1,3 +1,8 @@
+2004-06-08  Jakub Jelinek  <jakub@redhat.com>
+
+	* config/ia64/unwind-ia64.c (uw_frame_state_for): Don't assume a
+	leaf function without unwind info at RP 0.
+
 2003-02-26  Jan Hubicka  <jh@suse.cz>
 
 	* expr.c (emit_group_store):  Fix crash when converting single
